[package]
name = "abiui-api"
authors = ["xiaosongfu <xiaosong.fu@outlook.com>"]
description = "abiui api server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
http = "0.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
siwe = "0.6.0"
hex = "0.4.3"
jwt-simple = "0.12.6"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.1.0" }
